@@ -2,6 +2,7 @@ recent:
 	some cleanups, slight memory usage reduction
 	add log messages: 'log text "foo etc"'
 	fixed iptables and ipchains brace-grouping
+	fix filter_unroll loop-making bug
 
 0.9:
 	fix install target to install section 7 manpages too
@@ -73,4 +74,4 @@ recent:
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.37 2002/08/26 22:10:37 matthew Exp $
+$Id: HISTORY,v 1.38 2002/09/02 11:10:42 matthew Exp $
